--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,413 +12,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>season</th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>ftr</th>\n",
-       "      <th>htr</th>\n",
-       "      <th>referee</th>\n",
-       "      <th>hometeam</th>\n",
-       "      <th>awayteam</th>\n",
-       "      <th>ftg_hr</th>\n",
-       "      <th>htg_hr</th>\n",
-       "      <th>s_hr</th>\n",
-       "      <th>...</th>\n",
-       "      <th>ftg_car</th>\n",
-       "      <th>htg_car</th>\n",
-       "      <th>s_car</th>\n",
-       "      <th>st_car</th>\n",
-       "      <th>c_car</th>\n",
-       "      <th>f_car</th>\n",
-       "      <th>y_car</th>\n",
-       "      <th>r_car</th>\n",
-       "      <th>p_car</th>\n",
-       "      <th>day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>2000-08-19</td>\n",
-       "      <td>H</td>\n",
-       "      <td>H</td>\n",
-       "      <td>Rob Harris</td>\n",
-       "      <td>Charlton</td>\n",
-       "      <td>Man City</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.400000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>9.300000</td>\n",
-       "      <td>5.200000</td>\n",
-       "      <td>4.800000</td>\n",
-       "      <td>10.400000</td>\n",
-       "      <td>1.200000</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>1.100000</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>2000-08-19</td>\n",
-       "      <td>H</td>\n",
-       "      <td>H</td>\n",
-       "      <td>Graham Barber</td>\n",
-       "      <td>Chelsea</td>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>7.833333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.400000</td>\n",
-       "      <td>1.100000</td>\n",
-       "      <td>13.400000</td>\n",
-       "      <td>6.300000</td>\n",
-       "      <td>5.700000</td>\n",
-       "      <td>12.800000</td>\n",
-       "      <td>1.700000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>2000-08-19</td>\n",
-       "      <td>A</td>\n",
-       "      <td>D</td>\n",
-       "      <td>Barry Knight</td>\n",
-       "      <td>Coventry</td>\n",
-       "      <td>Middlesbrough</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>1.166667</td>\n",
-       "      <td>13.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.900000</td>\n",
-       "      <td>0.700000</td>\n",
-       "      <td>9.700000</td>\n",
-       "      <td>3.200000</td>\n",
-       "      <td>5.300000</td>\n",
-       "      <td>16.200000</td>\n",
-       "      <td>2.900000</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>2000-08-19</td>\n",
-       "      <td>D</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Andy D'Urso</td>\n",
-       "      <td>Derby</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>8.666667</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.100000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>7.900000</td>\n",
-       "      <td>4.500000</td>\n",
-       "      <td>5.100000</td>\n",
-       "      <td>14.100000</td>\n",
-       "      <td>1.600000</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2000-01</td>\n",
-       "      <td>2000-08-19</td>\n",
-       "      <td>H</td>\n",
-       "      <td>H</td>\n",
-       "      <td>Dermot Gallagher</td>\n",
-       "      <td>Leeds</td>\n",
-       "      <td>Everton</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.700000</td>\n",
-       "      <td>0.600000</td>\n",
-       "      <td>11.800000</td>\n",
-       "      <td>4.700000</td>\n",
-       "      <td>6.400000</td>\n",
-       "      <td>12.900000</td>\n",
-       "      <td>1.700000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.300000</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8284</th>\n",
-       "      <td>2021-22</td>\n",
-       "      <td>2022-04-09</td>\n",
-       "      <td>A</td>\n",
-       "      <td>A</td>\n",
-       "      <td>A Marriner</td>\n",
-       "      <td>Watford</td>\n",
-       "      <td>Leeds</td>\n",
-       "      <td>0.600000</td>\n",
-       "      <td>0.300000</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>0.428571</td>\n",
-       "      <td>10.428571</td>\n",
-       "      <td>3.285714</td>\n",
-       "      <td>3.714286</td>\n",
-       "      <td>10.714286</td>\n",
-       "      <td>1.142857</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8285</th>\n",
-       "      <td>2021-22</td>\n",
-       "      <td>2022-04-10</td>\n",
-       "      <td>H</td>\n",
-       "      <td>D</td>\n",
-       "      <td>M Atkinson</td>\n",
-       "      <td>Brentford</td>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>1.100000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>11.400000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.142857</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>11.714286</td>\n",
-       "      <td>3.857143</td>\n",
-       "      <td>4.285714</td>\n",
-       "      <td>8.142857</td>\n",
-       "      <td>1.285714</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>1.428571</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8286</th>\n",
-       "      <td>2021-22</td>\n",
-       "      <td>2022-04-10</td>\n",
-       "      <td>H</td>\n",
-       "      <td>H</td>\n",
-       "      <td>R Jones</td>\n",
-       "      <td>Leicester</td>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>1.400000</td>\n",
-       "      <td>0.700000</td>\n",
-       "      <td>10.300000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.571429</td>\n",
-       "      <td>0.857143</td>\n",
-       "      <td>11.285714</td>\n",
-       "      <td>3.285714</td>\n",
-       "      <td>3.285714</td>\n",
-       "      <td>8.571429</td>\n",
-       "      <td>0.714286</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8287</th>\n",
-       "      <td>2021-22</td>\n",
-       "      <td>2022-04-10</td>\n",
-       "      <td>D</td>\n",
-       "      <td>H</td>\n",
-       "      <td>A Taylor</td>\n",
-       "      <td>Man City</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>2.800000</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>15.500000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.428571</td>\n",
-       "      <td>1.857143</td>\n",
-       "      <td>18.571429</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>8.714286</td>\n",
-       "      <td>8.285714</td>\n",
-       "      <td>0.428571</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.285714</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8288</th>\n",
-       "      <td>2021-22</td>\n",
-       "      <td>2022-04-10</td>\n",
-       "      <td>H</td>\n",
-       "      <td>H</td>\n",
-       "      <td>M Oliver</td>\n",
-       "      <td>Norwich</td>\n",
-       "      <td>Burnley</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>9.900000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>10.285714</td>\n",
-       "      <td>3.571429</td>\n",
-       "      <td>4.714286</td>\n",
-       "      <td>10.857143</td>\n",
-       "      <td>1.142857</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8289 rows × 44 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       season    datetime ftr htr           referee   hometeam  \\\n",
-       "0     2000-01  2000-08-19   H   H        Rob Harris   Charlton   \n",
-       "1     2000-01  2000-08-19   H   H     Graham Barber    Chelsea   \n",
-       "2     2000-01  2000-08-19   A   D      Barry Knight   Coventry   \n",
-       "3     2000-01  2000-08-19   D   A       Andy D'Urso      Derby   \n",
-       "4     2000-01  2000-08-19   H   H  Dermot Gallagher      Leeds   \n",
-       "...       ...         ...  ..  ..               ...        ...   \n",
-       "8284  2021-22  2022-04-09   A   A        A Marriner    Watford   \n",
-       "8285  2021-22  2022-04-10   H   D        M Atkinson  Brentford   \n",
-       "8286  2021-22  2022-04-10   H   H           R Jones  Leicester   \n",
-       "8287  2021-22  2022-04-10   D   H          A Taylor   Man City   \n",
-       "8288  2021-22  2022-04-10   H   H          M Oliver    Norwich   \n",
-       "\n",
-       "            awayteam    ftg_hr    htg_hr       s_hr  ...   ftg_car   htg_car  \\\n",
-       "0           Man City  0.666667  0.333333  11.000000  ...  1.400000  0.400000   \n",
-       "1           West Ham  1.000000  0.166667   7.833333  ...  2.400000  1.100000   \n",
-       "2      Middlesbrough  2.500000  1.166667  13.000000  ...  0.900000  0.700000   \n",
-       "3        Southampton  1.500000  0.666667   8.666667  ...  1.100000  0.400000   \n",
-       "4            Everton  0.833333  0.000000   8.000000  ...  1.700000  0.600000   \n",
-       "...              ...       ...       ...        ...  ...       ...       ...   \n",
-       "8284           Leeds  0.600000  0.300000  11.000000  ...  0.571429  0.428571   \n",
-       "8285        West Ham  1.100000  0.400000  11.400000  ...  1.142857  0.142857   \n",
-       "8286  Crystal Palace  1.400000  0.700000  10.300000  ...  1.571429  0.857143   \n",
-       "8287       Liverpool  2.800000  1.500000  15.500000  ...  3.428571  1.857143   \n",
-       "8288         Burnley  1.000000  0.400000   9.900000  ...  1.000000  0.571429   \n",
-       "\n",
-       "          s_car    st_car     c_car      f_car     y_car     r_car     p_car  \\\n",
-       "0      9.300000  5.200000  4.800000  10.400000  1.200000  0.200000  1.100000   \n",
-       "1     13.400000  6.300000  5.700000  12.800000  1.700000  0.000000  2.000000   \n",
-       "2      9.700000  3.200000  5.300000  16.200000  2.900000  0.100000  0.500000   \n",
-       "3      7.900000  4.500000  5.100000  14.100000  1.600000  0.100000  0.400000   \n",
-       "4     11.800000  4.700000  6.400000  12.900000  1.700000  0.000000  1.300000   \n",
-       "...         ...       ...       ...        ...       ...       ...       ...   \n",
-       "8284  10.428571  3.285714  3.714286  10.714286  1.142857  0.142857  0.000000   \n",
-       "8285  11.714286  3.857143  4.285714   8.142857  1.285714  0.142857  1.428571   \n",
-       "8286  11.285714  3.285714  3.285714   8.571429  0.714286  0.000000  2.000000   \n",
-       "8287  18.571429  8.000000  8.714286   8.285714  0.428571  0.000000  2.285714   \n",
-       "8288  10.285714  3.571429  4.714286  10.857143  1.142857  0.000000  1.000000   \n",
-       "\n",
-       "      day  \n",
-       "0       6  \n",
-       "1       6  \n",
-       "2       6  \n",
-       "3       6  \n",
-       "4       6  \n",
-       "...   ...  \n",
-       "8284    6  \n",
-       "8285    7  \n",
-       "8286    7  \n",
-       "8287    7  \n",
-       "8288    7  \n",
-       "\n",
-       "[8289 rows x 44 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from preprocess import pack\n",
-    "from features import Features\n",
-    "\n",
+    "from features import Features,feature_selection\n",
+    "from sklearn.model_selection import train_test_split\n",
     "feat=Features(**pack)\n",
     "data=feat.execute()\n",
-    "data"
+    "cnt=feature_selection(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1311092.7055555554"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.select_dtypes('number').sum().sum()-data['day'].sum()\n",
-    "# data.shape"
+    "model = Pipeline([(RandomForestClassifier())])\n",
+    "bayes=optimizaztion.bayesia"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
