--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -12,16 +12,6 @@
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'ar=away-rolling'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -30,24 +20,24 @@
     "%autoreload 2\n",
     "warnings.simplefilter('ignore')\n",
     "\n",
-    "\"chr=conceded-home-rolling\"\n",
-    "\"car=conceded-away-rolling\"\n",
-    "\"hr=home-rolling\"\n",
-    "\"ar=away-rolling\"\n"
+    "# \"chr=conceded-home-rolling\"\n",
+    "# \"car=conceded-away-rolling\"\n",
+    "# \"hr=home-rolling\"\n",
+    "# \"ar=away-rolling\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# XGBClassifier( )\n"
+    "# XGBClassifier( )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,8 +87,8 @@
     "\n",
     "\n",
     "\n",
-    "model = XGBClassifier(random_state=0, booster='gbtree', tree_method='hist',\n",
-    "                      eval_metric='mlogloss', verbosity=0, **best_params)\n",
+    "model = XGBClassifier(random_state=0, booster='gbtree', tree_method='hist',objective='multi:softprob',\n",
+    "                      eval_metric=accuracy_score, verbosity=0, **best_params)\n",
     "\n",
     "\n",
     "def train(trainx, trainy):\n",
@@ -123,218 +113,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import features\n",
+    "best = features.auto_best_features(trainx, trainy, n_features=30)\n",
+    "trainx,valx,trainy,valy=train_test_split(best,trainy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainx.reset_index(inplace=True,drop=True)\n",
+    "trainy.reset_index(inplace=True,drop=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pca_ftg_hr</th>\n",
-       "      <th>p_car</th>\n",
-       "      <th>p_chr</th>\n",
-       "      <th>p_ar</th>\n",
-       "      <th>p_hr</th>\n",
-       "      <th>ftg_ar</th>\n",
-       "      <th>ftg_hr</th>\n",
-       "      <th>ftg_car</th>\n",
-       "      <th>hp_hr</th>\n",
-       "      <th>hp_ar</th>\n",
-       "      <th>...</th>\n",
-       "      <th>s_car</th>\n",
-       "      <th>s_hr</th>\n",
-       "      <th>pca_htg_chr</th>\n",
-       "      <th>st_car</th>\n",
-       "      <th>st_hr</th>\n",
-       "      <th>st_chr</th>\n",
-       "      <th>c_hr</th>\n",
-       "      <th>pca_htg_hr</th>\n",
-       "      <th>y_hr</th>\n",
-       "      <th>y_car</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8.866708</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1.166667</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9.3</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>3.303819</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>3.666667</td>\n",
-       "      <td>9.166667</td>\n",
-       "      <td>4.166667</td>\n",
-       "      <td>5.030941</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.174440</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>13.4</td>\n",
-       "      <td>7.833333</td>\n",
-       "      <td>1.884768</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>3.166667</td>\n",
-       "      <td>3.833333</td>\n",
-       "      <td>3.166667</td>\n",
-       "      <td>0.100927</td>\n",
-       "      <td>1.166667</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.516089</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>2.166667</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>13.000000</td>\n",
-       "      <td>-0.960373</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5.500000</td>\n",
-       "      <td>5.333333</td>\n",
-       "      <td>4.166667</td>\n",
-       "      <td>0.548668</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>2.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.097088</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>1.333333</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7.9</td>\n",
-       "      <td>8.666667</td>\n",
-       "      <td>-2.715519</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>4.166667</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>-1.903942</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>1.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.283887</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>0.124077</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.333333</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>4.333333</td>\n",
-       "      <td>-3.492375</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   pca_ftg_hr  p_car     p_chr  p_ar      p_hr  ftg_ar    ftg_hr  ftg_car  \\\n",
-       "0    8.866708    1.1  3.000000   1.7  1.000000     2.1  0.666667      1.4   \n",
-       "1    2.174440    2.0  0.833333   1.7  0.500000     1.5  1.000000      2.4   \n",
-       "2    2.516089    0.5  2.000000   1.3  2.166667     1.6  2.500000      0.9   \n",
-       "3    3.097088    0.4  1.500000   1.2  1.500000     1.1  1.500000      1.1   \n",
-       "4    2.283887    1.3  0.333333   1.3  0.166667     1.0  0.833333      1.7   \n",
-       "\n",
-       "      hp_hr  hp_ar  ...  s_car       s_hr  pca_htg_chr  st_car     st_hr  \\\n",
-       "0  1.166667    1.8  ...    9.3  11.000000     3.303819     5.2  3.666667   \n",
-       "1  1.000000    1.2  ...   13.4   7.833333     1.884768     6.3  3.166667   \n",
-       "2  2.000000    1.5  ...    9.7  13.000000    -0.960373     3.2  5.500000   \n",
-       "3  1.333333    1.6  ...    7.9   8.666667    -2.715519     4.5  4.166667   \n",
-       "4  0.333333    1.2  ...   11.8   8.000000     0.124077     4.7  3.333333   \n",
-       "\n",
-       "     st_chr      c_hr  pca_htg_hr      y_hr  y_car  \n",
-       "0  9.166667  4.166667    5.030941  2.000000    1.2  \n",
-       "1  3.833333  3.166667    0.100927  1.166667    1.7  \n",
-       "2  5.333333  4.166667    0.548668  1.500000    2.9  \n",
-       "3  2.000000  5.000000   -1.903942  1.500000    1.6  \n",
-       "4  7.000000  4.333333   -3.492375  0.833333    1.7  \n",
-       "\n",
-       "[5 rows x 30 columns]"
+       "array([[1793,    5,   12],\n",
+       "       [  15, 2869,   41],\n",
+       "       [   0,    0, 1481]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import features\n",
-    "best = features.auto_best_features(trainx, trainy, n_features=30)\n",
-    "best.head(5)\n"
+    "model.fit(trainx,trainy)\n",
+    "t_preds=model.predict(trainx)\n",
+    "v_preds=model.predict(valx)\n",
+    "\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(t_preds,trainy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[366, 123, 166],\n",
+       "       [174, 713, 295],\n",
+       "       [ 69,  93,  74]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(v_preds,valy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,48 +194,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.9769440267226935, 0.5636400587402318)"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_acc,val_acc=train(best, trainy)\n",
-    "train_acc,val_acc"
+    "# train_acc,val_acc=train(best, trainy)\n",
+    "# train_acc,val_acc\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2309,   66,  112],\n",
-       "       [  89, 3701,  191],\n",
-       "       [  19,   36, 1766]])"
+       "array([[2304,   62,  112],\n",
+       "       [  87, 3699,  201],\n",
+       "       [  26,   42, 1756]])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "preds=model.predict(best)\n",
-    "confusion_matrix(preds,trainy)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -433,16 +269,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in epochs:\n",
-    "    for batch in range()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# find the optimal parameters and by training and validating multiple times -the training and validation can be daone in loop or in single sert"
    ]
   },
@@ -481,72 +307,30 @@
     "                           ('max_depth', 10),\n",
     "                           ('n_estimators', 50),\n",
     "                           ('subsample', 1.0)])\n",
-    "model = XGBClassifier(random_state=0, booster='gbtree', tree_method='hist',eval_metric='mlogloss', verbosity=0, **best_params)\n",
-    "model.fit(t_x,t_y)\n",
-    "model.save_model('xgb.txt')\n",
-    "# model_ref=model.fit(t_x,t_y)\n",
-    "# model_ref.save_model('model_ref')\n",
-    "\n",
-    "\n",
-    "\n",
-    "# for epoch in range(epochs):\n",
-    "#     for batch in trainloader:\n",
-    "#         batch={k:v.numpy() for k,v in batch.items()}\n",
-    "#         model=model.load_mode('xgb')\n",
-    "#         model_ref=model.fit(batch['x'],batch['y'],xgb_model='model_ref')\n",
-    "#         model_ref.save_model('model_ref')\n",
-    "#         # break\n",
-    "#     break\n",
-    "        \n",
-    "        \n",
-    "for epoch in range(epochs):\n",
-    "    pass\n",
-    "\n"
+    "model = XGBClassifier(random_state=0, booster='gbtree', tree_method='hist', eval_metric='mlogloss', objective='multi:softprob' ,verbosity=0, **best_params)\n",
+    "model.fit(t_x,t_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5699638118214716"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5626602322424974\n",
-      "0.5626602322424974\n",
-      "0.5626602322424974\n",
-      "0.5626602322424974\n",
-      "0.5626602322424974\n"
-     ]
-    }
-   ],
-   "source": [
-    "for epoch in range(5):\n",
-    "    model.load_model('xgb.json')\n",
-    "    model.fit(v_x,v_y)\n",
-    "    print(accuracy_score(model.predict(t_x),t_y))\n",
-    "    model.save_model('xgb.json')\n",
-    "    "
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
